--- a/build.properties
+++ b/build.properties
@@ -14,8 +14,8 @@
 
 app.name=WebProxy
 app.version=1.0
-#server.home=../../jakarta-tomcat-5.0.28-HEAD
-portal.home=../../uPortal
+server.home=../../jakarta-tomcat-5.0.28-Rdev
+portal.home=../uPortal_UW_HEAD
 
 #==================== Compilation Control Options =====================
 
@@ -31,23 +31,24 @@ extlibdir=./ext-lib
 
 #Libraries that get deployed with the portlet
 commons-codec.jar = ${libdir}/commons-codec-1.3.jar
+commons-collections.jar = ${libdir}/commons-collections-3.1.jar
 commons-httpclient.jar = ${libdir}/commons-httpclient-3.0-rc1.jar
 commons-io.jar = ${libdir}/commons-io-1.0.jar
+commons-lang.jar = ${libdir}/commons-lang-2.1.jar
 commons-logging.jar = ${libdir}/commons-logging.jar
 commons-pool.jar = ${libdir}/commons-pool-1.2.jar
+commons-dbcp.jar = ${libdir}/commons-dbcp-1.2.1.jar
 junit.jar=${libdir}/junit.jar
 NekoHtml.jar=${libdir}/nekohtml.jar
 oscache.jar=${libdir}/oscache-2.1.jar
 xml-apis.jar=${libdir}/xml-apis.jar
 xalan.jar=${libdir}/xalan.jar
 xercesImpl.jar=${libdir}/xercesImpl.jar
+spring.jar=${libdir}/spring.jar
+spring-sandbox.jar=${libdir}/spring-sandbox_20050120.jar
+jdbc.jar=${libdir}/ojdbc14-10.2.0.1.0.jar
 
 #Libraries that may need to be deployed with the portlet
-spring.jar=${extlibdir}/spring.jar
-spring-sandbox.jar=${extlibdir}/spring-sandbox_20050120.jar
 PortalAPIAbstractionLayer.jar=${extlibdir}/PortalAPIAbstractionLayer.jar
-CommonStorage.jar=${extlibdir}/CommonStorage.jar
-
-#Libraries that are included with the portal installation
-portlet-api.jar=${portal.home}/lib/portlet-api-1.0.jar
-servlet.jar=${portal.home}/lib/servlet.jar
+portlet-api.jar=${extlibdir}/portlet-api-1.0.jar
+servlet.jar=${extlibdir}/servlet.jar
