--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -30,7 +30,7 @@ log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
 # user.dir System property.
 # WARNING: ALL SLASHES MUST BE FORWARD SLASHES OR ESCAPED BACK SLASHES!!!
 #
-log4j.appender.R.File=WebProxy.log
+log4j.appender.R.File=/my/uptestdemo/logs/portlets/WebProxy.log
 
 
 # This tells log4j what type of encoding to use
