--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,7 +10,7 @@
 # the tons of debug messages, and leave only INFO, WARN, ERROR, etc.
 #
 log4j.rootCategory=INFO, R
-log4j.category.edu.wisc.my.webproxy=TRACE, R
+log4j.category.edu.wisc.my.webproxy=DEBUG, R
 log4j.additivity.edu.wisc.my.webproxy=false
 
 ###########################################################################
@@ -30,7 +30,7 @@ log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
 # user.dir System property.
 # WARNING: ALL SLASHES MUST BE FORWARD SLASHES OR ESCAPED BACK SLASHES!!!
 #
-log4j.appender.R.File=/my/uptestdemo/logs/portlets/WebProxy.log
+log4j.appender.R.File=WebProxy.log
 
 
 # This tells log4j what type of encoding to use
