WPP-15:  Apply Incremental Development from UW Madison
git-svn-id: https://source.jasig.org/portlets/WebproxyPortlet/trunk@16259 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,8 +9,8 @@
 # following line after everything is running.  This will turn off
 # the tons of debug messages, and leave only INFO, WARN, ERROR, etc.
 #
-log4j.rootCategory=INFO, R
-log4j.category.edu.wisc.my.webproxy=DEBUG, R
+log4j.rootCategory=WARN, R
+log4j.category.edu.wisc.my.webproxy=WARN, R
 log4j.additivity.edu.wisc.my.webproxy=false
 
 ###########################################################################
