WPP-17 Updating the web proxy portlet to use HttpClient 4.0-beta2.  This update includes significant refactoring required by the HttpClient 4 API.  We've also updated the database persistence code to save a list of cookies rather than the lob-encoded serialized State (which no longer exists as of HttpClient 4).  The HttpClient object is now stored in the user session instead of the State object.
git-svn-id: https://source.jasig.org/portlets/WebproxyPortlet/trunk@18152 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/.project
+++ b/.project
@@ -1,19 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>WebProxyPortlet</name>
-  <comment>Provides web site content inclusion via a JSR-168 portlet.</comment>
-  <projects/>
-  <buildSpec>
-    <buildCommand>
-      <name>org.eclipse.jdt.core.javabuilder</name>
-      <arguments/>
-    </buildCommand>
-    <buildCommand>
-      <name>org.springframework.ide.eclipse.core.springbuilder</name>
-      <arguments/>
-    </buildCommand>
-  </buildSpec>
-  <natures>
-    <nature>org.springframework.ide.eclipse.core.springnature</nature>
-    <nature>org.eclipse.jdt.core.javanature</nature>
-  </natures>
+	<name>WebProxyPortlet</name>
+	<comment>Provides web site content inclusion via a JSR-168 portlet.</comment>
+	<projects>
+	</projects>
+	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.springframework.ide.eclipse.core.springbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.maven.ide.eclipse.maven2Builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>org.maven.ide.eclipse.maven2Nature</nature>
+		<nature>org.springframework.ide.eclipse.core.springnature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+	</natures>
 </projectDescription>
