--- a/src/main/webapp/WEB-INF/datasource.properties
+++ b/src/main/webapp/WEB-INF/datasource.properties
@@ -1,4 +1,5 @@
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:hsql://localhost:8887
-jdbc.username=sa
-jdbc.password=
+hibernate.connection.driver_class=org.hsqldb.jdbcDriver
+hibernate.connection.url=jdbc:hsqldb:hsql://localhost:8887
+hibernate.connection.username=sa
+hibernate.connection.password=
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
