WPP-17 Fixing minor bugs in last update, including logging misconfiguration and an incorrect bean name.  Also modifying the HttpManagerService to assume all ProxyServlet requests have access to a previously-configured, in-session HttpClient instance.
git-svn-id: https://source.jasig.org/portlets/WebproxyPortlet/trunk@18156 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,15 @@
     
     <display-name>Authenticated Web Proxy Portlet</display-name>
 	
+    <context-param>
+        <param-name>webAppRootKey</param-name>
+        <param-value>webproxy.root</param-value>
+    </context-param>
+    
+    <listener>
+        <listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
+    </listener>
+    
     <!--
      | This loads the applicationContext.xml spring bean config
 	 | when the servlet context starts. The WebApplicationContext
