--- a/src/main/webapp/WEB-INF/datasource.properties
+++ b/src/main/webapp/WEB-INF/datasource.properties
@@ -1,5 +1,6 @@
 hibernate.connection.driver_class=org.hsqldb.jdbcDriver
 hibernate.connection.url=jdbc:hsqldb:hsql://localhost:8887
+hibernate.connection.url = jdbc:hsqldb:file:${webproxy.root}/WEB-INF/db/webproxyDb
 hibernate.connection.username=sa
 hibernate.connection.password=
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
